Manipulate scale on graph to fit bounds - Scale now adjusts to fit about 90% of the bounds for better visibility

--- a/graphs.html
+++ b/graphs.html
@@ -20,7 +20,7 @@
         input {
             width: 100px;
         }
-        
+
     </style>
 </head>
 
@@ -57,8 +57,8 @@
                     <option value="engineering">Engineering Studies</option>
                     <option value="pdh">PDHPE</option>
                 </select>
-                <input type="number" class="lowerbound" placeholder="Lower bound">
-                <input type="number" class="upperbound" placeholder="Upper bound">
+                <input type="number" class="lowerbound" placeholder="Lower bound" value="0">
+                <input type="number" class="upperbound" placeholder="Upper bound" value="100">
             </div>
             <button class="generateGraph">Generate graph</button>
         </div>
