Change placeholder text for inputs

--- a/graphs.html
+++ b/graphs.html
@@ -61,8 +61,8 @@
                     <option value="pdh">PDHPE</option>
                 </select>
                 <div class="advancedConfig">
-                    <input type="number" class="lowerbound" placeholder="Lower bound" value="0">
-                    <input type="number" class="upperbound" placeholder="Upper bound" value="100">
+                    <input type="number" class="lowerbound" placeholder="Lower x" value="0">
+                    <input type="number" class="upperbound" placeholder="Upper x" value="100">
                     <select name="selectAxis" id="xAxis">
                         <option value="" selected disabled>X Axis</option>
                         <option value="rawMark">Raw Mark</option>
