--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
                     <span class="tooltiptext">
                         Weighted Average Mean (WAM): calculating your average mark, considering the weighting of each assessment.
                         <br> <br>
-                        Aligned marks: NESA's system for standardising your raw marks based on the difficulty of <em>your</em> HSC exam relative to past years.
+                        Aligned marks (/100): NESA's system for standardising your raw marks based on the difficulty of <em>your</em> HSC exam relative to other years.
                         <br> <br>
                         Band: The descriptor that corrrelates to your aligned mark. <a href="https://www.nsw.gov.au/education-and-training/nesa/hsc/results-and-certificates/understanding-your-results/#toc-performance-bands" target=”_blank”>NESA band cutoffs</a>
+                        <br> <br>
+                        Scaled (/50): NESA's system for standardising HSC marks across different subjects.
                 
                     </span>
                     <img src="question mark icon.png" alt="question mark icon" class="questionmark">
